[package]
name = "ark"
version = "0.1.0"
edition = "2021"

[dependencies]
amalthea = { path = "../amalthea" }
async-trait = "0.1.53"
chrono = "0.4.22"
dashmap = "5.3.3"
env_logger = "0.9.0"
extendr-api = "0.3.1"
harp = { path = "../harp" }
lazy_static = "1.4.0"
libR-sys = "0.3"
libc = "0.2"
log = "0.4.14"
nix = { version = "0.24.1", features = ["signal"] }
notify = "4.0.17"
parking_lot = "0.12.1"
ropey = "1.4.1"
serde = { version = "1.0.133", features = ["derive"] }
serde_json = "1.0.59"
stdext = { path = "../stdext" }
tokio = { version = "1.17.0", features = ["full"] }
tower-lsp = "0.16.0"
tree-sitter = "0.20.6"
tree-sitter-r = "0.19.5"
walkdir = "2"

[profile.dev]
rpath = true

# The libR-sys package doesn't currently provide bindings for R on aarch64
# Linux platforms, so on those systems we need to add the use-bingen feature,
# which causes the package to build its own bindings from scratch.
#
# Note that this typically requires the `llvm` and `clang` packages to be
# installed on the build host.
[target.'cfg(all(target_os="linux", target_arch="aarch64"))'.dependencies]
libR-sys = { version = "0.3", features = ["use-bindgen"] }
