[build-system]
requires = ["poetry-core>=1.8.0"]
build-backend = "poetry.core.masonry.api"

[project]
name = "positron-python-deps"
version = "2025.09"
description = "Dependencies for Positron Python extension"
requires-python = ">=3.9,<4.0"

dependencies = [
  "attrs==25.3.0",
  "cattrs==24.1.2",
  "docstring-to-markdown==0.13",
  "exceptiongroup==1.2.2",
  "jedi==0.19.2",
  "jedi-language-server==0.44.0",
  "lsprotocol==2023.0.1",
  "markdown-it-py==3.0.0",
  "mdurl==0.1.2",
  "parso==0.8.4",
  "pydantic==1.10.21",
  "pygls==1.3.1",
  "pygments==2.19.1",
  "typing-extensions==4.10.0",
]
