[package]
name = "amalthea"
version = "0.1.0"
edition = "2021"

[dependencies]
async-trait = "0.1.53"
chrono = "0.4.19"
crypto-common = "0.1.1"
dirs = "4.0.0"
futures = "0.3.21"
generic-array = "0.14.5"
hex = "0.4.3"
hmac = "0.12.0"
log = "0.4.14"
nix = "0.25.0"
serde = { version = "1.0.133", features = ["derive"] }
serde_json = "1.0.59"
sha2 = "0.10.1"
uuid = { version = "0.8.2", features = ["v4"] }
zmq = { version = "0.9.2", features = ["vendored"] }

[dev-dependencies]
rand = "0.8.5"
portpicker = "0.1.1"
