[package]
name = "ark"
version = "0.1.0"
edition = "2021"
description = """
The Amalthea R Kernel.
"""

[dependencies]
amalthea = { path = "../amalthea" }
anyhow = { version = "^1.0", features = ["backtrace"] }
async-trait = "0.1.53"
bus = "2.3.0"
chrono = "0.4.22"
crossbeam = { version = "0.8.2", features = ["crossbeam-channel"] }
ctor = "0.1.26"
dashmap = "5.3.3"
ego-tree = "0.6.2"
harp = { path = "../harp" }
html5ever = "0.26.0"
http = "0.2.8"
hyper = { version = "0.14.23", features = ["full"] }
lazy_static = "1.4.0"
libR-sys = "0.3.0"
libc = "0.2"
log = "0.4.14"
nix = { version = "0.24.1", features = ["signal"] }
once_cell = "1.16.0"
parking_lot = "0.12.1"
regex = "1.6.0"
ropey = "1.4.1"
scraper = "0.13.0"
serde = { version = "1.0.133", features = ["derive"] }
serde_json = "1.0.59"
stdext = { path = "../stdext" }
tokio = { version = "1.24.2", features = ["full"] }
tower-lsp = "0.17.0"
tree-sitter = "0.20.6"
tree-sitter-r = { git = "https://github.com/r-lib/tree-sitter-r", branch = "next" }
walkdir = "2"
yaml-rust = "0.4.5"

[profile.dev]
rpath = true

# The libR-sys package doesn't currently provide bindings for R on aarch64
# Linux platforms, so on those systems we need to add the use-bingen feature,
# which causes the package to build its own bindings from scratch.
#
# Note that this typically requires the `llvm` and `clang` packages to be
# installed on the build host.
[target.'cfg(all(target_os="linux", target_arch="aarch64"))'.dependencies]
libR-sys = { version = "0.3.0", features = ["use-bindgen"] }
