[package]
name = "ark"
version = "0.1.0"
edition = "2021"
rust-version = "1.64.0"
description = """
The Amalthea R Kernel.
"""

[dependencies]
amalthea = { path = "../amalthea" }
anyhow = { version = "^1.0", features = ["backtrace"] }
async-trait = "0.1.66"
base64 = "0.21.0"
bus = "2.3.0"
chrono = "0.4.23"
crossbeam = { version = "0.8.2", features = ["crossbeam-channel"] }
ctor = "0.1.26"
dashmap = "5.4.0"
ego-tree = "0.6.2"
harp = { path = "../harp" }
html5ever = "0.26.0"
http = "0.2.9"
hyper = { version = "0.14.24", features = ["full"] }
itertools = "0.10.5"
lazy_static = "1.4.0"
libR-sys = "0.4.0"
libc = "0.2"
log = "0.4.17"
nix = { version = "0.26.2", features = ["signal"] }
once_cell = "1.17.1"
parking_lot = "0.12.1"
regex = "1.7.1"
ropey = "1.6.0"
scraper = "0.15.0"
serde = { version = "1.0.154", features = ["derive"] }
serde_json = "1.0.94"
stdext = { path = "../stdext" }
tokio = { version = "1.26.0", features = ["full"] }
tower-lsp = "0.19.0"
tree-sitter = "0.20.9"
tree-sitter-r = { git = "https://github.com/r-lib/tree-sitter-r", branch = "next" }
uuid = "1.3.0"
walkdir = "2"
yaml-rust = "0.4.5"

[profile.dev]
rpath = true

# The libR-sys package doesn't currently provide bindings for R on aarch64
# Linux platforms, so on those systems we need to add the use-bingen feature,
# which causes the package to build its own bindings from scratch.
#
# Note that this typically requires the `llvm` and `clang` packages to be
# installed on the build host.
[target.'cfg(all(target_os="linux", target_arch="aarch64"))'.dependencies]
libR-sys = { version = "0.4.0", features = ["use-bindgen"] }
