[package]
name = "harp"
version = "0.1.0"
edition = "2021"
description = """
Tools for integrating R and Rust.
"""

[dependencies]
ctor = "0.1.26"
harp-macros = { path = "./harp-macros" }
lazy_static = "1.4.0"
libR-sys = { git = "https://github.com/kevinushey/libR-sys", branch = "feature/dynamic-lookup" }
log = "0.4.17"
stdext = { path = "../stdext" }
