[package]
name = "harp"
version = "0.1.0"
edition = "2021"
rust-version = "1.64.0"
description = """
Tools for integrating R and Rust.
"""

[dependencies]
c2rust-bitfields = "0.17.0"
ctor = "0.1.26"
harp-macros = { path = "./harp-macros" }
itertools = "0.10.5"
lazy_static = "1.4.0"
# Install libR-sys from Github since 0.4.0 doesn't work against R-devel.
# See https://github.com/extendr/libR-sys/pull/150 for more info.
libR-sys = { git = "https://github.com/jmcphers/libR-sys" }
libc = "0.2.140"
log = "0.4.17"
once_cell = "1.17.1"
parking_lot = "0.12.1"
regex = "1.7.3"
stdext = { path = "../stdext" }

[target.'cfg(all(target_os="linux", target_arch="aarch64"))'.dependencies]
libR-sys = { git = "https://github.com/jmcphers/libR-sys", features = ["use-bindgen"] }

